# cpp_server

./: CMakeLists.txt  Makefile
client/: Makefile
client/includes/: Client.hpp  client_common.hpp
client/src/: Client.cpp  Client.hpp  Writer.hpp  main.cpp
includes/: Client.hpp  ClientsConnection.hpp  Server.hpp  server.hpp  server_common.hpp
server/: Makefile
server/includes/: Client.hpp  ClientsConnection.hpp  SClient.hpp  Server.hpp
server/src/: Room.hpp  SClient.hpp  Server.cpp  Server.hpp  bbserver.cpp  main.cpp  server_common.hpp
src/: Server.cpp  main.cpp
